2010-xx-xx
    * add l1,l2,...,l5 to directly tag a message with the 1st, 2nd, ... tag
    * Fix ctrl-shift-n/p going to next/prev unread folder (thanks temerako)
    * fix all l* (label read/starred/etc.) mappings for new Thunderbirds
    * add ":dialog accounts" to open Thunderbird's account manager
    * More small fixes

2010-03-29
    * version 0.6
    * remove special handling of Ctrl-v/Ctrl-z in insert mode so that usual
      copy'n'paste actions will work again when writing a message
    * add +/- mapping in normal mode for pagewise scrolling of message
      (like <Space>, but without automatic jump to next unread message)
    * add ! mapping to toggle "junk" state of a message
    * asciidoc is no longer required to build Muttator
    * The full help system now available for Muttator.
    * add 'titlestring' option
    * rename *FolderLoaded* autocommand event to *FolderLoad*
    * add the *DOMLoad* autocommand event
    * add 'online' option
    * add 'smtpserver' option
    * add 'jsdebugger' option - switch on/off javascript debugger service

2009-03-29
    * version 0.5
    * fixes for recent TB nightly changes
    * new 'threads' option (non-functional for now)
    * new 'archivefolder' option
    * small bug fixes

2008-08-03:
    * version 0.4
    * new 'autoexternal' option to edit new messages/reply with the external editor by default.
      NOTE: You must set this option in your .muttatorrc, as options are not shared between the
      main thunderbird window and the compose window!
    * various *l* mappings for labeling messages
    * [m]p[m] to open RSS message in browser
    * [m]y[m] to yank sender or RSS URL
    * [m]Y[m] to yank subject
    * [m]R[m] to reply to all
    * new compose mappings: [m]s[m], [m]t[m] and [m]i[m] - Focus subject:, To: or message body
    * [m]q[m] quits composer now
    * new [m]x[m] mapping to toggle HTML display (is there a need for "simple HTML"?)
    * new [m]h[m] mapping to toggle headers

2008-06-04: